--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "e2e": "playwright test",
+    "e2e:headed": "playwright test --headed --project=chromium"
   },
   "dependencies": {
     "@docusaurus/core": "3.9.1",
@@ -28,6 +30,7 @@
     "@docusaurus/module-type-aliases": "3.9.1",
     "@docusaurus/tsconfig": "3.9.1",
     "@docusaurus/types": "3.9.1",
+    "@playwright/test": "^1.55.1",
     "typescript": "~5.6.2"
   },
   "browserslist": {
